add hidden balance feature

--- a/app/src/main/res/layout/bottom_sheet_edit_category.xml
+++ b/app/src/main/res/layout/bottom_sheet_edit_category.xml
@@ -53,6 +53,14 @@
         android:paddingBottom="16dp"
         android:textSize="14sp" />
 
+    <CheckBox
+        android:id="@+id/category_is_hidden"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:text="@string/hidden_balance"
+        />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/category_goal_date_button"
         android:layout_width="match_parent"
